@@ -18,7 +18,7 @@ AC_DIVERT_PUSH(1)dnl
 esyscmd([sed "s/^/# /" COPYRIGHT])dnl
 AC_DIVERT_POP()dnl
 
-AC_REVISION($Revision: 1.355.18.63 $)
+AC_REVISION($Revision: 1.355.18.64 $)
 
 AC_INIT(lib/dns/name.c)
 AC_PREREQ(2.59)
@@ -475,16 +475,6 @@ shared library configuration (e.g., LD_LIBRARY_PATH).)],
 		[AC_MSG_RESULT(assuming it does work on target platform)]
 		)
 		 
-		AC_CHECK_FUNC(DH_generate_parameters,
-			      AC_DEFINE(HAVE_DH_GENERATE_PARAMETERS, 1,
-					[Define if libcrypto has DH_generate_parameters]))
-		AC_CHECK_FUNC(RSA_generate_key,
-			      AC_DEFINE(HAVE_RSA_GENERATE_KEY, 1,
-					[Define if libcrypto has RSA_generate_key]))
-		AC_CHECK_FUNC(DSA_generate_parameters,
-			      AC_DEFINE(HAVE_DSA_GENERATE_PARAMETERS, 1,
-					[Define if libcrypto has DSA_generate_parameters]))
-
 AC_ARG_ENABLE(openssl-version-check,
 [AC_HELP_STRING([--enable-openssl-version-check],
         [Check OpenSSL Version @<:@default=yes@:>@])])
